infra/k8s/posts-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: posts
spec:
  containers:
   - name: posts
     image: manureddy/posts:1.0.0
     imagePullPolicy: Never
