infra/k8s/comments-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  type: NodePort
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001 # Port that is accessed from public ie from browser or postman etc these two ports need not to be identical
      targetPort: 4001 # Port where comments service is listening ie port of the running container

# This service can be accesses from outside like from chrome || postman
