infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl # Name of the deployment
spec:
  replicas: 1 # How many replicas you want
  selector: # Finding || getting the right pod information
    matchLabels: # We prpvide the label sections below
      app: moderation # This is a label a key-value pair
      # label2: comments so the key & value can be anything
  template: # Pod this deployment is going to create
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: anunirva/sgm-moderation
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-clusterip-srv
spec:
  selector:
    app: moderation
  type: ClusterIP
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
#This service can't be accessed from outside, will be visible within the cluster
