infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl # Name of the deployment
spec:
  replicas: 1 # How many replicas you want
  selector: # Finding || getting the right pod information
    matchLabels: # We prpvide the label sections below
      app: posts # This is a label a key-value pair
      # label2: comments so the key & value can be anything
  template: # Pod this deployment is going to create
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: anunirva/sgm-posts
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector:
    app: posts
  type: ClusterIP
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
#This service can't be accessed from outside, will be visible within the cluster
