infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000 # Port that is accessed from public ie from browser or postman etc these two ports need not to be identical
      targetPort: 4000 # Port where posts service is listening ie port of the running container

# This service can be accesses from outside like from chrome || postman
