infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl # Name of the deployment
spec:
  replicas: 1 # How many replicas you want
  selector: # Selector provides labels (app: query, application: comments) so that other services will match this label & connect
    matchLabels: # We prpvide the label sections below
      app: query # This is a label a key-value pair, other services will look for this label & connect
      # label2: comments so the key & value can be anything
  template: # describes the data a pod should have when created from a template
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: anunirva/sgm-query
---
apiVersion: v1
kind: Service
metadata:
  name: query-clusterip-srv
spec:
  selector:
    app: query
  type: ClusterIP
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
#This service can't be accessed from outside, will be visible within the cluster
