infra/k8s/query-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  type: NodePort
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002 # Port that is accessed from public ie from browser or postman etc these two ports need not to be identical
      targetPort: 4002 # Port where query service is listening ie port of the running container

# This service can be accesses from outside like from chrome || postman
