infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx # Helps the ingress controller to find the routing rules we are providing
    nginx.ingress.kubernetes.io/use-regex: 'true' # We are going to use regex in our file
spec:
  rules:
    - host: blog.com # when you type blog.com/posts you will see list of posts basically in /etc/hosts file we have 127.0.0.1 blog.com meaning insteadof localhost we are now doing blog.com
      http:
        paths:
          - path: /posts/create # whenever there is a route with /posts call the posts service
            pathType: Prefix
            backend:
              service:
                name: posts-clusterip-srv # our posts clusterip adress
                port:
                  number: 4000
          - path: /posts # whenever there is a route with /posts call the query service
            pathType: Prefix
            backend:
              service:
                name: query-clusterip-srv # our query clusterip adress
                port:
                  number: 4002
          - path: /posts/?(.*)/comments # whenever there is a route with /posts/:id/comments call the comments service
            pathType: Prefix
            backend:
              service:
                name: comments-clusterip-srv # our comments clusterip adress
                port:
                  number: 4001
          - path: / # use /?(.*) if you are using react app with routes whenever there is a route with / call the react client app
            pathType: Prefix
            backend:
              service:
                name: client-clusterip-srv # our comments clusterip adress
                port:
                  number: 3000
